# agropec

./: .gitignore  agropec.code-workspace  settings.toml
agropec/blueprints/webui/: views.py
agropec/ext/: database.py
backend/: .env  .flaskenv  .gitignore  app.py  pyproject.toml  requirements.txt  tweepee.db
backend/agropec/: app.py
backend/agropec/blueprints/api/: __init__.py
backend/agropec/blueprints/api/resources/: bovine.py
backend/agropec/ext/: database.py
backend/agropec/ext/migration/: __init__.py
backend/agropec/model/: Base.py  Bovine.py  Category.py  Color.py  Earring.py
backend/blueprints/webui/templates/: index.html
backend/migrations/: 001_Init.py
frontend/: package-lock.json  package.json
frontend/src/: app.d.ts  app.html  index.html
frontend/src/app/: app.component.html  app.component.ts  app.module.ts
frontend/src/components/: Button.svelte  Card.svelte  ComboBox.svelte  Context.svelte  Header.svelte  Input.css  Radio.svelte  TextInput.svelte
frontend/src/model/: Bovine.ts  Category.ts  Color.ts  Earring.ts
frontend/src/routes/: +page.svelte
protocol/: main.py  setup.py
protocol/data/: conveyor.py  conveyor_off.py  watcher.py
protocol/sno/: Conveyor.py  ModularService.py  constants.py
protocol/sno.egg-info/: PKG-INFO  SOURCES.txt
protocol/sno/base_modules/: AsyncModule.py  CoreEventModule.py  EventModule.py  Module.py  PingModule.py  TcpModule.py  UdpModule.py
protocol/sno/dataset/: ChainList.py  Collection.py  (+7 more)
sensor/: main.py  pyproject.toml  requirements.txt
sensor/src/: main.py
webview/: client.py
(+20 files in other folders)
