[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bruno Casas <brunocasas04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
dynaconf = "^3.1.9"
peewee = "^3.16.2"
python-dotenv = "^0.21.0"
Flask-RESTful = "^0.3.9"
peewee-migrate = "^1.5.1"
psycopg2 = "^2.9.5"
flask-peewee = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
